5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1721_3063.log
== TEST (2019-05-02 19:25:53) 
-- CODE:
po= int(input("qtd de gold: "))
a= input("armadura: ")
d= int(input("numero de 1 a 8: "))
	if (po>=200 and a="inteira"):
		print(30*d-20)
-- ERROR:
File "XXXX", line 4
    if (po>=200 and a="inteira"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:07) 
-- CODE:
po= int(input("qtd de gold: "))
a= input("armadura: ")
d= int(input("numero de 1 a 8: "))
	if (po=>200 and a="inteira"):
		print(30*d-20)
-- ERROR:
File "XXXX", line 4
    if (po=>200 and a="inteira"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:33) 
-- CODE:
po= int(input("qtd de gold: "))
a= input("armadura: ")
d= int(input("numero de 1 a 8: "))
	if (po>=200) and (a="inteira"):
		print(30*d-20)
-- ERROR:
File "XXXX", line 4
    if (po>=200) and (a="inteira"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:48) 
-- CODE:
po= int(input("qtd de gold: "))
a= input("armadura: ")
d= int(input("numero de 1 a 8: "))
	if (po=200) and (a="inteira"):
		print(30*d-20)
-- ERROR:
File "XXXX", line 4
    if (po=200) and (a="inteira"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:28:38) 
-- CODE:
po= int(input("qtd de gold: "))
a= input("armadura: ")
d= int(input("numero de 1 a 8: "))
	if (po=0):
		print("Entrada invalida")
	if (po=200) and (a="inteira"):
		print(30*d-20)
-- ERROR:
File "XXXX", line 4
    if (po=0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:29:08) 
-- CODE:
po= int(input("qtd de gold: "))
a= input("armadura: ")
d= int(input("numero de 1 a 8: "))
	if po=0:
		print("Entrada invalida")
	if (po=200) and (a="inteira"):
		print(30*d-20)
-- ERROR:
File "XXXX", line 4
    if po=0:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:32:44) 
-- CODE:
po= int(input("qtd de gold: "))
a= input("armadura: ")
d= int(input("numero de 1 a 8: "))
	if (po=0):
		print("Entrada invalida")
	elif (po=200) and (a="INTEIRA"):
		print(30*d-20)
	elif (po=50) and (a="MALHA"):
		print(15*d-1)
	elif (po=100) and (a="PLACA"):
		print(20*d-18)
	else:
		print("PO insuficiente")
-- ERROR:
File "XXXX", line 4
    if (po=0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:32:58) 
-- CODE:
po=int(input("qtd de gold: "))
a=input("armadura: ")
d=int(input("numero de 1 a 8: "))
	if (po=0):
		print("Entrada invalida")
	elif (po=200) and (a="INTEIRA"):
		print(30*d-20)
	elif (po=50) and (a="MALHA"):
		print(15*d-1)
	elif (po=100) and (a="PLACA"):
		print(20*d-18)
	else:
		print("PO insuficiente")
-- ERROR:
File "XXXX", line 4
    if (po=0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:34:32) 
-- CODE:
po=int(input("qtd de gold: "))
a=input("armadura: ")
d=int(input("numero de 1 a 8: "))
	if (po==0):
		print("Entrada invalida")
	elif (po==200) and (a=="INTEIRA"):
		print(30*d-20)
	elif (po==50) and (a=="MALHA"):
		print(15*d-1)
	elif (po==100) and (a=="PLACA"):
		print(20*d-18)
	else:
		print("PO insuficiente")
-- ERROR:
File "XXXX", line 4
    if (po==0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:35:09) 
-- CODE:
po=int(input("qtd de gold: "))
a=input("armadura: ")
d=int(input("numero de 1 a 8: "))
if (po==0):
		print("Entrada invalida")
	elif (po==200) and (a=="INTEIRA"):
		print(30*d-20)
	elif (po==50) and (a=="MALHA"):
		print(15*d-1)
	elif (po==100) and (a=="PLACA"):
		print(20*d-18)
else:
		print("PO insuficiente")
-- ERROR:
File "XXXX", line 6
    elif (po==200) and (a=="INTEIRA"):
                                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:35:22) 
-- CODE:
po=int(input("qtd de gold: "))
a=input("armadura: ")
d=int(input("numero de 1 a 8: "))
if (po==0):
		print("Entrada invalida")
elif (po==200) and (a=="INTEIRA"):
		print(30*d-20)
elif (po==50) and (a=="MALHA"):
		print(15*d-1)
elif (po==100) and (a=="PLACA"):
		print(20*d-18)
else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:36:02) 
-- CODE:
po=int(input("qtd de gold: "))
a=input("armadura: ")
d=int(input("numero de 1 a 8: "))
if (po==0):
		print("Entrada invalida")
elif (po>=200) and (a=="INTEIRA"):
		print(30*d-20)
elif (po>=50) and (a=="MALHA"):
		print(15*d-1)
elif (po>=100) and (a=="PLACA"):
		print(20*d-18)
else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:36:23) 
-- CODE:
po=int(input("qtd de gold: "))
a=input("armadura: ")
d=int(input("numero de 1 a 8: "))
if (po==0):
		print("Entrada invalida")
elif (po>=200) and (a=="INTEIRA"):
		print(30*d-20)
elif (po>=50) and (a=="MALHA"):
		print(15*d-1)
elif (po>=100) and (a=="PLACA"):
		print(20*d-18)
else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:36:50) 
-- CODE:
po=int(input("qtd de gold: "))
a=input("armadura: ")
d=int(input("numero de 1 a 8: "))
if (po==0):
		print("Entrada invalida")
elif (po>=200) and (a=="INTEIRA"):
		print(30*d-20)
elif (po>=50) and (a=="MALHA"):
		print(15*d-1)
elif (po>=100) and (a=="PLACA"):
		print(20*d-18)
else:
		print("PO insuficiente")
-- EXECUTION TIME:
0.171733
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
74
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
